testsuite/bsc.interra/messages/EUnboundTyCon/EUnboundTyCon1.bs.bsc-out.expected
checking package dependencies
compiling EUnboundTyCon1.bs
Error: "EUnboundTyCon1.bs", line 21, column 17: (T0007)
  Unbound type constructor `Int1'
